# rustbin

./: .gitignore  Cargo.toml  Dockerfile  README.md  vercel.json
frontend/: app.js  index.css  index.html  vercel.json
src/: main.rs
